bastion_sg.tf
resource "aws_security_group" "bas_sg" {
    name = var.bastion-sg-name
    vpc_id = aws_vpc.my_vpc.id
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["${var.ssh-locate}"]
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    
    tags = {
        name = var.bastion-sg-name
    }
}
