route_public.tf
resource "aws_route_table" "public_route_table" {
    vpc_id = aws_vpc.my_vpc.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.my_igw.id
        }  
}
resource "aws_route_table_association" "public_route_table_association_1" {
    subnet_id      = aws_subnet.public_web_subnet_1.id
    route_table_id = aws_route_table.public_route_table.id
}
resource "aws_route_table_association" "public_route_table_association_2" {
    subnet_id      = aws_subnet.public_web_subnet_2.id
    route_table_id = aws_route_table.public_route_table.id
}
